// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-project-scaffold - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Scaffold the frontend preview, backend services, database, API routes, and wire frontend for an Azure-centric project following an approved project plan. Generates a frontend preview with auto-open in the default browser, then scaffolds backend via parallel sub-agents. Suggests verification and local dev setup as follow-ups. WHEN: "scaffold backend", "build services", "execute plan", "scaffold project", "create backend", "implement plan", "build backend", "scaffold services", "wire frontend", "create API", "scaffold API", "preview frontend".",
  "extractedKeywords": [
    "approved",
    "auto-open",
    "azure",
    "azure-centric",
    "backend",
    "bicep",
    "browser",
    "build",
    "cli",
    "create",
    "database",
    "default",
    "deploy",
    "execute",
    "follow-ups",
    "following",
    "frontend",
    "function",
    "generates",
    "implement",
    "local",
    "parallel",
    "plan",
    "preview",
    "project",
    "routes",
    "scaffold",
    "scaffolds",
    "services",
    "setup",
    "sql",
    "sub-agents",
    "suggests",
    "terraform",
    "then",
    "validation",
    "verification",
    "when",
    "wire",
    "with",
  ],
  "name": "azure-project-scaffold",
}
`;

exports[`azure-project-scaffold - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "approved",
  "auto-open",
  "azure",
  "azure-centric",
  "backend",
  "bicep",
  "browser",
  "build",
  "cli",
  "create",
  "database",
  "default",
  "deploy",
  "execute",
  "follow-ups",
  "following",
  "frontend",
  "function",
  "generates",
  "implement",
  "local",
  "parallel",
  "plan",
  "preview",
  "project",
  "routes",
  "scaffold",
  "scaffolds",
  "services",
  "setup",
  "sql",
  "sub-agents",
  "suggests",
  "terraform",
  "then",
  "validation",
  "verification",
  "when",
  "wire",
  "with",
]
`;
